@@ -2839,6 +2839,27 @@ build
     <code>CONFIG_NOKIA6100_BLINIT</code>: Initial backlight setting
   </li>
   <p>
+    The following may need to be tuned for your hardware:
+  </p>
+  <li>
+    <code>CONFIG_NOKIA6100_INVERT</code>: Display inversion, 0 or 1, Default: 1
+  </li>
+  <li>
+    <code>CONFIG_NOKIA6100_MY</code>: Display row direction, 0 or 1, Default: 0
+  </li>
+  <li>
+    <code>CONFIG_NOKIA6100_MX</code>: Display column direction, 0 or 1, Default: 1
+  </li>
+  <li>
+    <code>CONFIG_NOKIA6100_V</code>: Display address direction, 0 or 1, Default: 0
+  </li>
+  <li>
+    <code>CONFIG_NOKIA6100_ML</code>: Display scan direction, 0 or 1, Default: 0
+  </li>
+  <li>
+    <code>CONFIG_NOKIA6100_RGBORD</code>: Display RGB order, 0 or 1, Default: 0
+  </li>
+  <p>
     Required LCD driver settings:
   </p>
   <li>
