@@ -430,14 +430,14 @@ defconfig -- This is a configuration file similar to the Linux
 		CONFIG_PAGING_AT45DB - Use the at45db.c FLASH driver.  If this is selected,
 		  then the MTD interface to the Atmel AT45DB device will be used to support
 		  paging.
-		CONFIG_PAGING_BINOFFSET - If CONFIG_PAGING_M25PX or is CONFIG_PAGING_AT45DB
-                  defined then CONFIG_PAGING_BINOFFSET will be used to specify the offset
+	CONFIG_PAGING_BINOFFSET - If CONFIG_PAGING_M25PX or is CONFIG_PAGING_AT45DB
+		  defined then CONFIG_PAGING_BINOFFSET will be used to specify the offset
 		  in bytes into the FLASH device where the NuttX binary image is located.
 		  Default: 0
-		CONFIG_PAGING_SPIPORT - If CONFIG_PAGING_M25PX CONFIG_PAGING_AT45DB is
-                  defined and the device has multiple SPI busses (ports), then this
-                  configuration should be set to indicate which SPI port the device is
-                  connected. Default: 0
+	CONFIG_PAGING_SPIPORT - If CONFIG_PAGING_M25PX CONFIG_PAGING_AT45DB is
+ 	      defined and the device has multiple SPI busses (ports), then this
+		  configuration should be set to indicate which SPI port the device is
+		  connected. Default: 0
 
 	The following can be used to disable categories of APIs supported
 	by the OS.  If the compiler supports weak functions, then it
@@ -556,6 +556,14 @@ defconfig -- This is a configuration file similar to the Linux
 		CONFIG_NOKIA6100_S1D15G10 - Selects the Epson S1D15G10 display controller
 		CONFIG_NOKIA6100_PCF8833 - Selects the Phillips PCF8833 display controller
 		CONFIG_NOKIA6100_BLINIT - Initial backlight setting
+
+		The following may need to be tuned for your hardware:
+		CONFIG_NOKIA6100_INVERT - Display inversion, 0 or 1, Default: 1
+		CONFIG_NOKIA6100_MY - Display row direction, 0 or 1, Default: 0
+		CONFIG_NOKIA6100_MX - Display column direction, 0 or 1, Default: 1
+		CONFIG_NOKIA6100_V - Display address direction, 0 or 1, Default: 0
+		CONFIG_NOKIA6100_ML - Display scan direction, 0 or 1, Default: 0
+		CONFIG_NOKIA6100_RGBORD - Display RGB order, 0 or 1, Default: 0
 
 		Required LCD driver settings:
 		CONFIG_LCD_NOKIA6100 - Enable Nokia 6100 support
